tests/language_modules/11_errors_results/invalid_semantics/keyword_error_name.vf
module KeywordErrorName

error value

end KeywordErrorName